Fix all-day events overlapping sticky header on scroll
Make sure that when scrolling on a time grid, the all-day events don't
overlap the sticky days header (see the week and day view).

Workaround for https://github.com/fullcalendar/fullcalendar/issues/5596.

--- a/client/src/components/Calendar.css
+++ b/client/src/components/Calendar.css
@@ -52,3 +52,10 @@ a.fc-list-day-text, a.fc-list-day-text:hover, a.fc-list-day-text:focus {
   max-height: 95%;
   overflow-y: auto;
 }
+
+/* Make sure that when scrolling on a time grid, the all-day events don't overlap
+the sticky days header. Workaround for
+https://github.com/fullcalendar/fullcalendar/issues/5596 */
+.fc .fc-timegrid .fc-daygrid-body {
+  z-index: 1;
+}
